# ansible_zscaler

./: .ansible-lint  .gitignore  .yamllint  README.md  ansible.cfg  copy_default_vars.sh  devbox.json  devbox_poetry.json  pyproject.toml  pyproject_poetry.toml  requirements.yaml  taskfile.yaml
.github/workflows/: zia.yaml
inventory/host_vars/localhost/: zscaler_provider.yaml
playbooks/zia/: zia.yaml  zia_activate_changes.yaml  zia_atp_settings.yaml  zia_cloud_applications_info.yaml  zia_network_application_info.yaml  zia_roles.yaml  zia_ssl_inspection_rules.yaml  zia_test.yaml  zia_url_categories.yaml
playbooks/zpa/: zpa.yaml  zpa_ba_certificate.yaml  zpa_policy_access_rules.yaml  zpa_roles.yaml
roles/zscaler_zia/zia_activation_status/defaults/: main.yaml
roles/zscaler_zia/zia_activation_status/meta/: main.yaml
roles/zscaler_zia/zia_activation_status/tasks/: main.yaml
roles/zscaler_zia/zia_activation_status_info/meta/: main.yaml
roles/zscaler_zia/zia_activation_status_info/tasks/: main.yaml
roles/zscaler_zia/zia_atp_settings/defaults/: main.yaml
roles/zscaler_zia/zia_atp_settings/meta/: main.yaml
roles/zscaler_zia/zia_atp_settings/tasks/: main.yaml
roles/zscaler_zia/zia_atp_settings/vars/: main.yaml
roles/zscaler_zia/zia_cloud_browser_isolation_profile_info/: README.md
roles/zscaler_zia/zia_cloud_firewall_ip_destination_groups_info/: README.md
roles/zscaler_zia/zia_cloud_firewall_ip_source_groups_info/: README.md
roles/zscaler_zia/zia_cloud_firewall_network_application_group_info/: README.md
roles/zscaler_zia/zia_cloud_firewall_network_application_info/: README.md
roles/zscaler_zia/zia_cloud_firewall_network_services_groups_info/: README.md
roles/zscaler_zia/zia_cloud_firewall_network_services_info/: README.md
roles/zscaler_zia/zia_location_groups_info/: README.md
roles/zscaler_zia/zia_location_management_info/: README.md
roles/zscaler_zia/zia_url_categories_info/: README.md
roles/zscaler_zia/zia_user_management_department_info/: README.md
roles/zscaler_zia/zia_user_management_groups_info/: README.md
(+82 files in other folders)
