[project]
name = "Zscaler_automation_with_Ansible"
version = "1.3"
description = "Collection of Ansible playbooks for Zscaler ZIA and ZPA"
authors = ["Bjorn-Vegar Borge <bvborge@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible-core>=2.19",
    "ansible-lint>=25.7.0",
    "dnspython>=2.7.0",
    "jmespath>=1.0.1",
    "jsondiff>=2.2.1",
    "ncclient>=0.6.19",
    "ntc-templates>=7.9.0",
    "packaging>=25",
    "paramiko>=4.0",
    "passlib>=1.7.4",
    "pycountry>=24.6.1",
    "requests>=2.32",
    "requests-toolbelt>=1.0.0",
    "xmltodict>=0.14.2",
    "zscaler-sdk-python>=1.7",
]
