[project]
name = "Zscaler_automation_with_Ansible"
version = "1.3"
description = "Collection of Ansible playbooks for Zscaler ZIA and ZPA"
authors = ["Bjorn-Vegar Borge <bvborge@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible-core>=2.19.1",
    "ansible-lint>=25.8.2",
    "ansible-pylibssh>=1.2",
    "dnspython>=2.7",
    "jmespath>=1.0",
    "jsondiff>=2.2",
    "ncclient>=0.6",
    "ntc-templates>=7.9",
    "packaging>=25",
    "paramiko>=4.0",
    "passlib>=1.7",
    "pycountry>=24.6",
    "requests>=2.32",
    "requests-toolbelt>=1.0",
    "xmltodict>=0.14",
    "zscaler-sdk-python>=1.8.4",
]
